Bug 433348 - "Rename" action is disabled until a second document is open
Summary: "Rename" action is disabled until a second document is open
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-20 19:09 UTC by magiblot
Modified: 2021-02-21 18:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.0
Sentry Crash Report:


Attachments
Screen recording of the issue (1.64 MB, video/x-matroska)
2021-02-20 19:09 UTC, magiblot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description magiblot 2021-02-20 19:09:48 UTC
Created attachment 135986 [details]
Screen recording of the issue

SUMMARY

Please watch the attached video.

STEPS TO REPRODUCE
1. Open a document with Kate.
2. Try to rename the document within Kate: you can't because the "Rename" action is disabled.
3. Open a second document.
4. "Rename" is now enabled.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.16-arch1-1
OS Type: 64-bit
Graphics Platform: X11

ADDITIONAL INFORMATION

Thank you.
Comment 1 pify 2021-02-21 11:27:46 UTC
I can reproduce the issue

Operating System: Debian GNU/Linux
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.0-3-amd64
OS Type: 64-bit
Comment 2 Christoph Cullmann 2021-02-21 18:33:13 UTC
Hmm, I fail to reproduce with

Kate 20.12.2
KDE Frameworks 5.78.0
Qt 5.15.2 (built against 5.15.2)
The xcb windowing system
Comment 3 Christoph Cullmann 2021-02-21 18:34:42 UTC
Hmm, or no, if I follow the steps from the video, it happens, just not if you open the first file from the UI ;(
Comment 4 Christoph Cullmann 2021-02-21 18:41:02 UTC
Git commit 76ae777268fb783a1716031066a81f4ab8d51244 by Christoph Cullmann.
Committed on 21/02/2021 at 18:39.
Pushed by cullmann into branch 'master'.

ensure actions like "rename..." will be correctly activated

e.g. if the first unnamed document has an url set,
this wasn't updated correctly, same for saveAs of a new
document

M  +2    -1    kate/katemainwindow.cpp

https://invent.kde.org/utilities/kate/commit/76ae777268fb783a1716031066a81f4ab8d51244