ensure actions like "rename..." will be correctly activated

e.g. if the first unnamed document has an url set,
this wasn't updated correctly, same for saveAs of a new
document

BUG: 433348